--- a/github_trending_ios/Assets/Base.lproj/Main.storyboard
+++ b/github_trending_ios/Assets/Base.lproj/Main.storyboard
@@ -1,24 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--GitHub Trends-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="trendingRepositoriesViewController" title="GitHub Trends" id="BYZ-38-t0r" customClass="TrendingRepositoriesViewController" customModule="github_trending_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" text="" translatesAutoresizingMaskIntoConstraints="NO" id="tTr-B6-ehO">
+                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ile-DA-wP2">
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="trendingCell" rowHeight="140" id="1B7-1j-m6p" customClass="TrendingRepositoryCell" customModule="github_trending_ios" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="140"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1B7-1j-m6p" id="RIg-Qk-M4E">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="139.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lFV-QZ-VTv">
+                                                    <rect key="frame" x="15" y="11" width="345" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="Qcs-70-0pr"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="stars count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MgP-tT-Fcq">
+                                                    <rect key="frame" x="15" y="40" width="345" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="CdL-2b-9cF"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="51r-ep-jsF">
+                                                    <rect key="frame" x="15" y="69" width="345" height="60"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="lFV-QZ-VTv" firstAttribute="top" secondItem="RIg-Qk-M4E" secondAttribute="topMargin" id="BLp-P6-NaZ"/>
+                                                <constraint firstItem="51r-ep-jsF" firstAttribute="top" secondItem="MgP-tT-Fcq" secondAttribute="bottom" constant="8" id="DG1-pj-Pv2"/>
+                                                <constraint firstItem="51r-ep-jsF" firstAttribute="leading" secondItem="RIg-Qk-M4E" secondAttribute="leadingMargin" id="EPP-wB-516"/>
+                                                <constraint firstItem="51r-ep-jsF" firstAttribute="bottom" secondItem="RIg-Qk-M4E" secondAttribute="bottomMargin" id="INy-tZ-YJw"/>
+                                                <constraint firstItem="lFV-QZ-VTv" firstAttribute="trailing" secondItem="RIg-Qk-M4E" secondAttribute="trailingMargin" id="ZGv-WD-rbT"/>
+                                                <constraint firstItem="MgP-tT-Fcq" firstAttribute="leading" secondItem="RIg-Qk-M4E" secondAttribute="leadingMargin" id="jQU-vy-mAk"/>
+                                                <constraint firstItem="51r-ep-jsF" firstAttribute="trailing" secondItem="RIg-Qk-M4E" secondAttribute="trailingMargin" id="jpG-WD-sch"/>
+                                                <constraint firstItem="lFV-QZ-VTv" firstAttribute="leading" secondItem="RIg-Qk-M4E" secondAttribute="leadingMargin" id="k0I-Cy-GcM"/>
+                                                <constraint firstItem="MgP-tT-Fcq" firstAttribute="trailing" secondItem="RIg-Qk-M4E" secondAttribute="trailingMargin" id="nxA-SM-sIw"/>
+                                                <constraint firstItem="MgP-tT-Fcq" firstAttribute="top" secondItem="lFV-QZ-VTv" secondAttribute="bottom" constant="8" id="xb8-j5-tK4"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="name" destination="lFV-QZ-VTv" id="Vfu-hs-XBU"/>
+                                            <outlet property="projectDescription" destination="51r-ep-jsF" id="nKm-pr-EB7"/>
+                                            <outlet property="starsCount" destination="MgP-tT-Fcq" id="6ud-yZ-n8k"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fz3-kr-jFL" userLabel="ObscuringView">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="9Ii-Vp-plf">
+                                        <rect key="frame" x="177" y="291" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="OHS-ng-iud"/>
+                                            <constraint firstAttribute="width" constant="20" id="YQh-5K-imf"/>
+                                        </constraints>
+                                    </activityIndicatorView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UQ1-4m-W70">
+                                        <rect key="frame" x="169" y="286" width="37" height="30"/>
+                                        <state key="normal" title="Retry"/>
+                                        <connections>
+                                            <action selector="retry:" destination="BYZ-38-t0r" eventType="touchUpInside" id="P3s-0m-dKB"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="9Ii-Vp-plf" firstAttribute="centerY" secondItem="Fz3-kr-jFL" secondAttribute="centerY" id="26j-G4-0jY"/>
+                                    <constraint firstItem="9Ii-Vp-plf" firstAttribute="centerX" secondItem="Fz3-kr-jFL" secondAttribute="centerX" id="6aj-eM-LL1"/>
+                                    <constraint firstItem="UQ1-4m-W70" firstAttribute="centerY" secondItem="Fz3-kr-jFL" secondAttribute="centerY" id="LSV-JJ-IpI"/>
+                                    <constraint firstItem="UQ1-4m-W70" firstAttribute="centerX" secondItem="Fz3-kr-jFL" secondAttribute="centerX" id="Ooy-sk-mTP"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fz3-kr-jFL" secondAttribute="trailing" id="1XH-ev-oS0"/>
+                            <constraint firstItem="tTr-B6-ehO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="C5g-xt-fJC"/>
+                            <constraint firstItem="ile-DA-wP2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DJQ-NW-iGv"/>
+                            <constraint firstItem="tTr-B6-ehO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Fkz-FQ-NeW"/>
+                            <constraint firstItem="ile-DA-wP2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="NId-Fg-I98"/>
+                            <constraint firstItem="tTr-B6-ehO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Og1-Su-0hE"/>
+                            <constraint firstItem="ile-DA-wP2" firstAttribute="top" secondItem="tTr-B6-ehO" secondAttribute="bottom" id="SEl-Cu-044"/>
+                            <constraint firstItem="tTr-B6-ehO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Tyi-Xc-O0g"/>
+                            <constraint firstItem="Fz3-kr-jFL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Z2R-XC-JbL"/>
+                            <constraint firstItem="ile-DA-wP2" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="gIV-Z4-4Ug"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Fz3-kr-jFL" secondAttribute="bottom" id="phG-eT-CFZ"/>
+                            <constraint firstItem="Fz3-kr-jFL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qRe-Vn-gwr"/>
+                            <constraint firstItem="tTr-B6-ehO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xYF-Ee-DMG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="loadingSpinner" destination="9Ii-Vp-plf" id="KVB-ks-NwB"/>
+                        <outlet property="obscuringView" destination="Fz3-kr-jFL" id="Bid-Em-fP3"/>
+                        <outlet property="retryButton" destination="UQ1-4m-W70" id="m7N-AR-CWT"/>
+                        <outlet property="searchBar" destination="tTr-B6-ehO" id="TV3-uD-Bxy"/>
+                        <outlet property="tableView" destination="ile-DA-wP2" id="89x-Pm-VRD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-199.19999999999999" y="66.11694152923539"/>
         </scene>
     </scenes>
 </document>
