--- a/github_trending_ios/Assets/Base.lproj/Main.storyboard
+++ b/github_trending_ios/Assets/Base.lproj/Main.storyboard
@@ -136,7 +136,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-199.19999999999999" y="66.11694152923539"/>
+            <point key="canvasLocation" x="-607" y="99"/>
+        </scene>
+        <!--Repository View Controller-->
+        <scene sceneID="dJ0-3j-YEA">
+            <objects>
+                <viewController storyboardIdentifier="repositoryViewController" id="r5s-Jx-BMQ" customClass="RepositoryViewController" customModule="github_trending_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="l5a-5x-fJS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="KEY-km-DRR"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ixc-Kc-ckJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="294" y="99"/>
         </scene>
     </scenes>
 </document>
